--- a/index.html
+++ b/index.html
@@ -46,112 +46,108 @@
 				</div>
 			</div>
 		</section>
-		<section>
-			<section class="about_me">
-            <div class="information">
-               <h2>The who, the what</h2>
-               <div class="about_me_content">
-                  <div class="headshot_container">
-                     <img
-                        class="headshot"
-                        src="resources/profile_headshot.jpg"
-                        alt="Stian Malmin headshot"
-                     />
-                  </div>
-                  <div>
-                     <p>
-                        My name is Stian Malmin, design enthusiast and future
-                        front-end developer and product developer Design is something
-                        i am passionate enough about to devote my life to. The
-                        pleasuring activity of forming ideas and dive into them,
-                        experimenting with and optimizing tangible objects with my
-                        tools. Thats how it started anyhow, that was before i was
-                        consciously thinking about the user journey that every user
-                        goes through utilizing a product, from their perspective. And
-                        they are many. After having gone through product design
-                        studies, and web design studies, the meaning of the word
-                        design has been dramatically broadened, and i have learned
-                        not how to make things look pretty, a skill i already
-                        possessed, but what design really is, ways of analyzing
-                        problems and tools that makes the process of developing so
-                        much more thorough than what i had before..
-                     </p>
-                  </div>
-               </div>
-         </section>
-
-				<section class="sub_section-alternative" id="projects">
-					<h2>Projects</h2>
-					<div class="project-container">
-						<div class="project_card">
-							<img
-								class="project-image"
-								src="resources/Museum_landing.png"
-								alt="Museum page Image"
-							/>
-							<h3>Project One</h3>
-							<p class="info_card">
-								Semester project for the first year, designing a website
-								for a fictional museum
-							</p>
-							<hr />
-							<p class="info_card">
-								<a
-									class="project_link"
-									href="https://github.com/Malminn/Semester-project-museum"
-								>
-									Github repository
-								</a>
-							</p>
-						</div>
-						<div class="project_card">
-							<img
-								class="project-image"
-								src="resources/Rainydays_landing.png"
-								alt="Cross course project Rainydays"
-							/>
-							<h3>Cross course project Rainydays</h3>
-							<p class="info_card">
-								Cross course project from the first year, where we made a
-								website for a fictional store selling raincoats
-							</p>
-							<hr />
-							<p class="info_card">
-								<a class="project_link" href="https://github.com/Malminn">
-									Github repository
-								</a>
-							</p>
-						</div>
-						<div class="project_card">
-							<img
-								class="project-image"
-								src="resources/Exam_landing.png"
-								alt="Project exam Image"
-							/>
-							<h3>Project Three</h3>
-							<p class="info_card">
-								First attempt at project exam, where i was not prepared
-								enough
-							</p>
-							<hr />
-							<p class="info_card">
-								<a
-									class="project_link"
-									href="https://github.com/Noroff-FEU-Assignments/project-exam-1-Malminn"
-								>
-									Github repository
-								</a>
-							</p>
-						</div>
+		<section class="about_me">
+			<div class="information">
+				<h2>who am i</h2>
+				<div class="about_me_content">
+					<div class="headshot_container">
+						<img
+							class="headshot"
+							src="resources/profile_headshot.jpg"
+							alt="Stian Malmin headshot"
+						/>
 					</div>
-				</section>
+					<div class="text">
+						<p>
+							My name is Stian Malmin, design enthusiast and future
+							front-end developer and product developer Design is something
+							i am passionate enough about to devote my life to. The
+							pleasuring activity of forming ideas and dive into them,
+							experimenting with and optimizing tangible objects with my
+							tools. Thats how it started anyhow, that was before i was
+							consciously thinking about the user journey that every user
+							goes through utilizing a product, from their perspective. And
+							they are many. After having gone through product design
+							studies, and web design studies, the meaning of the word
+							design has been dramatically broadened, and i have learned
+							not how to make things look pretty, a skill i already
+							possessed, but what design really is, ways of analyzing
+							problems and tools that makes the process of developing so
+							much more thorough than what i had before..
+						</p>
+					</div>
+				</div>
+
+				<h2>Projects</h2>
+				<div class="project-container" id="projects">
+					<div class="project_card">
+						<img
+							class="project-image"
+							src="resources/Museum_landing.png"
+							alt="Museum page Image"
+						/>
+						<h3>Museum</h3>
+						<p class="info_card">
+							Semester project for the first year, designing a website for
+							a fictional museum
+						</p>
+						<hr />
+						<p class="info_card">
+							<a
+								class="project_link"
+								href="https://github.com/Malminn/Semester-project-museum"
+							>
+								Github repository
+							</a>
+						</p>
+					</div>
+					<div class="project_card">
+						<img
+							class="project-image"
+							src="resources/Rainydays_landing.png"
+							alt="Cross course project Rainydays"
+						/>
+						<h3>Cross course project Rainydays</h3>
+						<p class="info_card">
+							Cross course project from the first year, where we made a
+							website for a fictional store selling raincoats
+						</p>
+						<hr />
+						<p class="info_card">
+							<a class="project_link" href="https://github.com/Malminn">
+								Github repository
+							</a>
+						</p>
+					</div>
+					<div class="project_card">
+						<img
+							class="project-image"
+							src="resources/Exam_landing.png"
+							alt="Project exam Image"
+						/>
+						<h3>Project Three</h3>
+						<p class="info_card">
+							First attempt at project exam, where i was not prepared
+							enough
+						</p>
+						<hr />
+						<p class="info_card">
+							<a
+								class="project_link"
+								href="https://github.com/Noroff-FEU-Assignments/project-exam-1-Malminn"
+							>
+								Github repository
+							</a>
+						</p>
+					</div>
+				</div>
 
 				<footer id="contact_me">
 					<h2>Contact me</h2>
 					<p>malminn@hotmail.com</p>
 				</footer>
+				<script src="Nav.js"></script>
 			</div>
 		</section>
-		<script src="Nav.js"></script>
 	</body>
-</html> 
+</html>
